--- a/app.json
+++ b/app.json
@@ -1,35 +1,11 @@
 {
-    "name": "BikashRobot", 
+    "name": "Espro Help", 
     "description": "A Telegram Best Artificial Intelligence Chat Bot , written in Python with Pyrogram",
-    "logo": "https://te.legra.ph/file/f73af9a4ffe130a83d8d2.jpg",
+    "logo": "h",
     "stack": "container",
     "env": {
         "BOT_TOKEN": {
             "description": "Input Bot token here",
-            "required": true
-        },
-        "OWNER_USERNAME": {
-            "description": "Input Owner Username here ( Without @)",
-            "required": true
-        },
-        "SUPPORT_GROUP": {
-            "description": "Input support group username here ( Without @)",
-            "required": true
-        },
-        "UPDATES_CHANNEL": {
-            "description": "Input updates channel username here ( Without @) ",
-            "required": true
-        },
-        "BOT_USERNAME": {
-            "description": "Input Bot USERNAME here ( Without @)",
-            "required": true
-        },  
-        "BOT_IMAGE": {
-            "description": "Input Bot start pic link here",
-            "required": true
-        },       
-        "MONGO_URL": {
-            "description": "Input mongo db url here",
             "required": true
         },
         "API_ID": {
