--- a/app.json
+++ b/app.json
@@ -1,39 +1,39 @@
 {
-    "name": "Espro Help", 
-    "description": "A Telegram Best Artificial Intelligence Chat Bot , written in Python with Pyrogram",
-    "logo": "h",
-    "stack": "container",
-    "env": {
-        "BOT_TOKEN": {
-            "description": "Input Bot token here",
-            "required": true
-        },
-        "API_ID": {
-            "description": "Input api id here",
-            "required": true
-        },
-        "API_HASH": {
-            "description": "Input api hash here",
-            "required": true
-        }
+  "name": "Espro Help",
+  "description": "A Telegram Best Artificial Intelligence Chat Bot, written in Python with Pyrogram",
+  "logo": "https://i.imgur.com/your-logo.png",  // Optional: Replace with a valid logo URL or remove this line
+  "stack": "container",
+  "env": {
+    "BOT_TOKEN": {
+      "description": "Input Bot token here",
+      "required": true
     },
-    "buildpacks": [
-        {
-            "url": "heroku/python"
-        },
-        {
-              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-        }
-    ],
-    "addons": [
-        {
-            "plan": "heroku-postgresql"
-        }
-    ],
-    "formation": {
-          "worker": {
-              "quantity": 1,
-              "size": "eco"
-          }
+    "API_ID": {
+      "description": "Input api id here",
+      "required": true
+    },
+    "API_HASH": {
+      "description": "Input api hash here",
+      "required": true
     }
+  },
+  "buildpacks": [
+    {
+      "url": "heroku/python"
+    },
+    {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+    }
+  ],
+  "addons": [
+    {
+      "plan": "heroku-postgresql"
+    }
+  ],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "standard-1x"
+    }
+  }
 }
